align rule fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -172,6 +172,6 @@
 }
 
 .app__container {
-	margin-left: 32px;
-	margin-right: 32px;
+	margin-left: auto;
+	margin-right: auto;
 }
